syntax = "proto3";

option go_package = "github.com/TUM-Dev/Campus-Backend/api";
option java_multiple_files = true;
option java_package = "app.tum.campus.api";
option java_outer_classname = "CampusApiProto";

package api;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Campus {
  rpc GetTopNews (google.protobuf.Empty) returns (GetTopNewsReply) {
    option (google.api.http) = {
      get: "/topnews"
    };
  }

  rpc GetNewsSources (google.protobuf.Empty) returns (NewsSourceArray) {
    option (google.api.http) = {
      get: "/news/sources",
      response_body: "sources"
    };
  }

  rpc SearchRooms (SearchRoomsRequest) returns (SearchRoomsReply) {
    option (google.api.http) = {
      get: "/rooms/search",
      response_body: "rooms"
    };
  }
}

message SearchRoomsRequest {
  string q = 1;
}

message SearchRoomsReply {
  repeated Room rooms = 1;
}

message Room {
  string room_id = 1;
  string room_code = 2;
  string building_nr = 3;
  string arch_id = 4;
  string info = 5;
  string address = 6;
  string purpose = 7;
  string campus = 8;
  string name = 9;
}

message NewsSourceArray {
  repeated NewsSource sources = 1;
}

message NewsSource {
  string source = 1;
  string title = 2;
  string icon = 3;
}

message GetTopNewsReply {
  string image_url = 1;
  string link = 2;
  google.protobuf.Timestamp created = 3;
  google.protobuf.Timestamp from = 4;
  google.protobuf.Timestamp to = 5;
}
